change form endpoints

--- a/WebGL Builds/island-unity/index.html
+++ b/WebGL Builds/island-unity/index.html
@@ -95,7 +95,7 @@
         // performance, uncomment the following line:
         // config.devicePixelRatio = 1;
 
-        unityShowBanner("EdVenture Marketing");
+        unityShowBanner("Innovation Island");
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
